--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:sqlserver://LAPTOP-9T8FEB81\\MSSQLSERVER01;database=kimeltu
-spring.datasource.username = user_kim
-spring.datasource.password = samsung
+spring.datasource.url=jdbc:sqlserver://LAPTOP-9T8FEB81\\MSSQLSERVER01;database=kimeltu
+spring.datasource.username=user_kim
+spring.datasource.password=samsung
 server.port=8080
-
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update or none)
-spring.jpa.hibernate.ddl-auto = none
-
+spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
