--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,8 @@
         </dependency>-->
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.2.8.Final</version>
+            <artifactId>hibernate-spatial</artifactId>
+            <version>5.2.17.Final</version>
         </dependency>
 
         <dependency>
