add lombok Apoderado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:sqlserver://216.155.90.149;database=qa_BDGestion
-spring.datasource.username=sa
-spring.datasource.password=Kumple22*zu+
+## spring.datasource.url=jdbc:sqlserver://216.155.90.149;database=qa_BDGestion
+## spring.datasource.username=sa
+## spring.datasource.password=Kumple22*zu+
+
+spring.datasource.url=jdbc:sqlserver://LAPTOP-9T8FEB81\\MSSQLSERVER01;database=kimeltu
+spring.datasource.username=user_kim
+spring.datasource.password=samsung
+
 server.port=8080
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
