add new methods to agent

--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,8 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-        </plugins>
+        </plugins>        
+        <finalName>app-gescolar</finalName>
     </build>
 
 </project>
