--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,14 @@
 ## spring.datasource.url=jdbc:sqlserver://216.155.90.149;database=qa_BDGestion
 ## spring.datasource.username=sa
 ## spring.datasource.password=Kumple22*zu+
-
-spring.datasource.url=jdbc:sqlserver://LAPTOP-9T8FEB81\\MSSQLSERVER01;database=kimeltu
+spring.datasource.url=jdbc:sqlserver://LAPTOP-9T8FEB81\\MSSQLSERVER01;databaseName=kimeltu
 spring.datasource.username=user_kim
 spring.datasource.password=samsung
 
 server.port=8080
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update or none)
